data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_728.wast
;; 9. **Test Description:**    Verify a scenario where multiple `br_if` instructions target different structured control instructions based on different conditions, ensuring each branch is taken correctly.    - **Constraint Checked:** Handling multiple `br_if` instructions with different conditions in one context.    - **Relation to Incorrect Condition Evaluation:** Ensures each `br_if` condition evaluation is treated independently and correctly.

(assert_invalid
  (module
    (func
      (block (result i32)
        (i32.const 1)
        (if (result i32)
          (then
            (br_if 0 (i32.const 0))
            (i32.const 2)
          )
        )
        (drop)
        (block (result i32)
          (i32.const 1)
          (if (result i32)
            (then
              (br_if 0 (i64.const 3))
            )
          )
        )
        (drop)
      )
    )
  )
  "type mismatch"
)